# mlir-hs

./: .gitignore  Setup.hs  configure  mlir-hs.cabal
src/MLIR/: AST.hs  Native.hs
src/MLIR/AST/: Builder.hs  PatternUtil.hs  Rewrite.hs
src/MLIR/AST/Dialect/: Affine.hs  LLVM.hs
src/MLIR/Native/: FFI.hs
tblgen/: hs-generators.cc  tblgen-wrapper.hs
test/MLIR/Test/: Generators.hs
